# OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md
Libraries/: TODO.txt
Libraries/assimp/code/: CMakeLists.txt
Libraries/enet/: CMakeLists.txt
Libraries/entt/: CMakeLists.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/glew/: CMakeLists.txt
Libraries/imgui/: CMakeLists.txt
Libraries/miniaudio/: CMakeLists.txt
Libraries/nlohmann_json/: CMakeLists.txt
Libraries/stb_image/: CMakeLists.txt
Libraries/stb_image/include/stb_image/: stb_image.h
Libraries/stb_truetype/: CMakeLists.txt
Main/: CMakeLists.txt
Main/include/: GLFWfunctions.hpp  GLerror.hpp  shader.h  shader.hpp
Main/resources/: frag.glsl  vert.glsl
Main/src/: GLFWfunctions.cpp  GLerror.cpp  main.cpp  shader.cpp
